# setup.cfg
[metadata]
name = sas2spark 
version = attr: sas2spark.__version__ 
author = Rao Xu
author_email = taoxu@umich.edu
description = A Python package mimicking common SAS procedures for Spark/Pandas.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/taoxu2016/sas2spark
license = MIT 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src 
packages = find: 
python_requires = >=3.8 
install_requires =
    pandas>=1.0 
    # PySpark is optional, handle via try-except in code
    # Add other dependencies here if needed

[options.packages.find]
where = src

# Optional: Entry points if you create command-line scripts
# [options.entry_points]
# console_scripts =
#     my_script = sas2spark.module:main_function